fix horizontal scroll bar on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -348,55 +348,107 @@ p.logo-spacing {
   justify-content: center;
 }
 
-.art-card {
-  width: 350px;
-  height: 350px;
-  border:rgba(0, 0, 0, 0.125) 1px solid;
-  border-radius: 2rem;
-  margin: 20px;
-
-  background-position: center;
-  background-repeat: no-repeat;
-  /* background-size: cover; */
-  background-size: contain;
-
-  animation-name: shrink;
-	animation-iteration-count: 1;
-	animation-timing-function: ease-out;
-	animation-duration: .15s;
-}
-
-.art-card:hover {
-  width: 370px;
-  height: 370px;
-
-  animation-name: grow;
-	animation-iteration-count: 1;
-	animation-timing-function: ease-out;
-	animation-duration: .15s;
+@media (max-width: 400px) {
+  .art-card {
+    width: 320px;
+    height: 320px;
+    border:rgba(0, 0, 0, 0.125) 1px solid;
+    border-radius: 2rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
   
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-size: cover; */
+    background-size: contain;
+  
+    animation-name: shrinkmobile;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: .15s;
+  }
+
+  .art-card:hover {
+    width: 330px;
+    height: 330px;
+
+    animation-name: growmobile;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: .15s;
+  }
+  @keyframes growmobile {
+    0% {
+      width: 320px;
+      height: 320px;
+    }
+    100% {
+      width: 330px;
+      height: 330px;
+    }
+  }
+  
+  @keyframes shrinkmobile {
+    0% {
+      width: 330px;
+      height: 330px;
+    }
+    100% {
+      width: 320px;
+      height: 320px;
+    }
+  }
 }
 
-@keyframes grow {
-	0% {
+@media (min-width: 401px) {
+  .art-card {
     width: 350px;
     height: 350px;
-	}
-	100% {
-    width: 370px;
-    height: 370px;
-	}
-}
+    border:rgba(0, 0, 0, 0.125) 1px solid;
+    border-radius: 2rem;
+    margin: 20px;
+  
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-size: cover; */
+    background-size: contain;
+  
+    animation-name: shrink;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: .15s;
+  }
 
-@keyframes shrink {
-	0% {
+  .art-card:hover {
     width: 370px;
     height: 370px;
-	}
-	100% {
-    width: 350px;
-    height: 350px;
-	}
+
+    animation-name: grow;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: .15s;
+  }
+  @keyframes grow {
+    0% {
+      width: 350px;
+      height: 350px;
+    }
+    100% {
+      width: 370px;
+      height: 370px;
+    }
+  }
+  
+  @keyframes shrink {
+    0% {
+      width: 370px;
+      height: 370px;
+    }
+    100% {
+      width: 350px;
+      height: 350px;
+    }
+  }
 }
 
 .art-card.yeti {
